--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.0",
+    "@react-google-maps/api": "^2.20.7",
     "@reduxjs/toolkit": "^2.8.2",
     "@studio-freight/hamo": "^0.6.28",
     "@studio-freight/react-lenis": "^0.0.43",
@@ -20,6 +21,7 @@
     "clsx": "^2.1.0",
     "dayjs": "^1.11.13",
     "gsap": "^3.12.5",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.539.0",
     "next": "^14.2.31",
     "react": "^18",
@@ -28,6 +30,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.62.0",
     "react-intersection-observer": "^9.6.0",
+    "react-leaflet": "^4.2.1",
     "react-modal-video": "^2.0.1",
     "react-odometerjs": "^3.1.3",
     "react-redux": "^9.2.0",
